# dnf-repo

./: .stack-all  ChangeLog.md  LICENSE  README.md  TODO  dnf-repo.cabal  dnf-tool.cabal  stack-lts14.yaml  stack-lts16.yaml  stack-lts18.yaml  stack.yaml
.github/workflows/: build.yml
data/: copr.fedorainfracloud.orgCOLONOWNERCOLONREPO.repo  koji-REPO.repo
src/: Common.hs  CoprRepo.hs  ExpireRepos.hs  KojiRepo.hs  Main.hs  State.hs  Sudo.hs  TimeStamp.hs  YumRepoFile.hs
test/: tests.hs
