name:                dnf-tool
version:             0.1.0
synopsis:            One line summary
description:
        Short paragraph here
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen <juhpetersen@gmail.com>
maintainer:          Jens Petersen <juhpetersen@gmail.com>
copyright:           2022  Jens Petersen <juhpetersen@gmail.com>
category:            Utility
homepage:            https://github.com/juhp/dnf-tool
bug-reports:         https://github.com/juhp/dnf-tool/issues
build-type:          Simple
--  extra-doc-files:     README.md
--                       ChangeLog.md
cabal-version:       2.0
-- tested-with:         GHC == 8.6.5
--                        | == 8.8.4
--                        | == 8.10.7
--                        | == 9.0.2
data-dir:            data
data-files:          _copr:copr.fedorainfracloud.org:OWNER:REPO.repo

source-repository head
  type:                git
  location:            https://github.com/juhp/dnf-tool.git

executable dnf-tool
  main-is:             Main.hs
  other-modules:       Paths_dnf_tool
                       YumRepoFile
  hs-source-dirs:      src
  build-depends:       base < 5,
                       directory,
                       extra,
                       filepath,
                       ini,
                       simple-cmd,
                       simple-cmd-args,
                       text
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options:       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages
